--- a/trunk/MDT_Tools/MDT.Tools.DB.SetComment.Plugin/MDT.Tools.DB.SetComment.Plugin.csproj
+++ b/trunk/MDT_Tools/MDT.Tools.DB.SetComment.Plugin/MDT.Tools.DB.SetComment.Plugin.csproj
@@ -53,7 +53,6 @@
     <Compile Include="UI\tableInfoForm.Designer.cs">
       <DependentUpon>tableInfoForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Utils\FilePathHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MDT.ThirdParty.Controls\MDT.ThirdParty.Controls.csproj">
@@ -78,6 +77,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="MDT.Tools.pfx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Utils\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
