--- a/MDT_Tools/MDT.Tools.DB.SetComment.Plugin/MDT.Tools.DB.SetComment.Plugin.csproj
+++ b/MDT_Tools/MDT.Tools.DB.SetComment.Plugin/MDT.Tools.DB.SetComment.Plugin.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <EmbeddedResource Include="UI\tableInfoForm.resx">
       <DependentUpon>tableInfoForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
