--- a/trunk/MDT_Tools/MDT.Tools.DB.DocGen.Plugin/MDT.Tools.DB.DocGen.Plugin.csproj
+++ b/trunk/MDT_Tools/MDT.Tools.DB.DocGen.Plugin/MDT.Tools.DB.DocGen.Plugin.csproj
@@ -47,7 +47,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\client\plugin\MDT.Tools.DB.DocGen.Plugin\</OutputPath>
+    <OutputPath>..\client\plugin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
