--- a/trunk/MDT_Tools/client/control/csharp_codegenconfig.ini
+++ b/trunk/MDT_Tools/client/control/csharp_codegenconfig.ini
@@ -9,4 +9,4 @@ TableFilter=
 IsShowGenCode=True
 IsShowComment=False
 CodeRule=ibatis
-Ibatis=G:\old\MDT Train\ATS_MODEL_Dev\ATSModelConfig_ORA.xml
+Ibatis=F:\Program Files\client\control\ATSModelConfig_ORA.xml
