--- a/trunk/MDT_Tools/client/control/java_codegenconfig.ini
+++ b/trunk/MDT_Tools/client/control/java_codegenconfig.ini
@@ -3,6 +3,6 @@ BSPackage=ats.yukon.datamanager.bs
 WSPackage=ats.yukon.integration.endpoint.ws.datamanager
 OutPut=C:\Users\Administrator\Desktop\test\
 TableFilter=
-IsShowGenCode=False
+IsShowGenCode=True
 CodeRule=ibatis
-Ibatis=G:\old\MDT Train\ATS_MODEL_Dev\ATSModelConfig_ORA.xml
+Ibatis=F:\Program Files\client\control\ATSModelConfig_ORA.xml
