--- a/MDT_Tools/MDT.Tools/App.config
+++ b/MDT_Tools/MDT.Tools/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="App" value="MDT 实用工具管理器"/>
+  </appSettings>
   <runtime>
     <gcConcurrent enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
