--- a/MDT_Tools/MDT.Tools.DB.Common/MDT.Tools.DB.Common.csproj
+++ b/MDT_Tools/MDT.Tools.DB.Common/MDT.Tools.DB.Common.csproj
@@ -49,7 +49,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\client\bin\</OutputPath>
+    <OutputPath>..\client\plugin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
