--- a/trunk/MDT_Tools/MDT.ThirdParty.Controls/NVelocity/Runtime/Defaults/nvelocity.properties
+++ b/trunk/MDT_Tools/MDT.ThirdParty.Controls/NVelocity/Runtime/Defaults/nvelocity.properties
@@ -97,7 +97,7 @@ resource.loader = file
 file.resource.loader.description = Velocity File Resource Loader
 file.resource.loader.class = NVelocity.Runtime.Resource.Loader.FileResourceLoader
 file.resource.loader.path = 
-file.resource.loader.cache = true
+file.resource.loader.cache = false
 file.resource.loader.modificationCheckInterval = 0
 
 # ----------------------------------------------------------------------------
