--- a/MDT_Tools/client/control/templateconfig.ini
+++ b/MDT_Tools/client/control/templateconfig.ini
@@ -10,6 +10,6 @@ DataTye1=DB
 TemplateName1=template.test.createtable.sql.vm
 SaveFileEncoding1=UTF-8
 #SaveFilePath1=
-IsShowGenCode1=false
+IsShowGenCode1=true
 #Java,C#,TSQL,HTML,JavaScript,XML,C++.NET
 CodeLanguage1=TSQL
